2007-09-13  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/release-notes.xml: Mention RTL in the introductory 
	paragraph.
	* docbook/C/rndevelopers.xml: Remove the TODO text which should 
	link to the GTK+ announcement because it has not happened yet. 
	We can add this in the en translation.
	* docbook/C/rni18n.xml: Remove the text about new languages, 
	because we either do not have any, or I can't find out that 
	information.
	* docbook/C/rnusers.xml: Remove an excessive For Instance.

	We are now in string freeze. Typos and small improvements may 
	be made in the en translation.

2007-09-13  Luca Ferretti  <elle.uca@libero.it>

	* docbook/Makefile_shared.am_fragment: Add it to DOC_LINGUAS.

2007-09-12  Luca Ferretti  <elle.uca@libero.it>

	* docbook/it:
	* docbook/it/figures:
	* docbook/it/figures/rnusers-epiphany.png:
	* docbook/it/figures/rnusers-screensave-note.png:
	* docbook/it/figures/rnusers-gedit_color_schemes_preferences.png:
	* docbook/it/figures/rndevelopers-library-gnome-org.png:
	* docbook/it/figures/rnusers-nautilus-drive-properties.png:
	* docbook/it/figures/rnusers-evolution-backup.png:
	* docbook/it/figures/rnusers-yelp.png:
	* docbook/it/figures/rnusers-evolution-attachment.png:
	* docbook/it/figures/rnusers-control-panel-encryption-keyring.png:
	* docbook/it/figures/rnusers-gtkfilechooser-search.png:
	* docbook/it/it.po:
	Added Italian transation and some localized figures.

2007-09-12  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/rni18n.xml: Updated the list of languages from 
	http://l10n.gnome.org/releases/gnome-2-20.xml, adding Nepali 
	and Persian in case they hit 80%, and adding English. The number 
	still seems to be 50 languages (less than 54 in 2.16).
	The summary text must still be updated or removed. Note that 
	removals do not disturb the release-notes translators.

2007-09-12  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/release-notes.xml:
	* docbook/C/rni18n.xml: