@@ -81,8 +81,8 @@
 			so that we have translations of the languages if needed.
 			-->
 			<para>These &gnomeversion; release notes are available in several languages:
-				<ulink url="../bg/">Albanian</ulink>, 
-				<ulink url="../bg/">Arabicpa</ulink>, 
+				<ulink url="../ar/">Albanian</ulink>, 
+				<ulink url="../sq/">Arabic</ulink>, 
 				<ulink url="../bg/">Bulgarian</ulink>, 
 				<ulink url="../ca/">Catalan</ulink>,
         <ulink url="../zh_CN/">Chinese (Simplified)</ulink>,
@@ -105,7 +105,7 @@
 				<ulink url="../pt_BR/">Portuguese (Brazilian)</ulink>,  
 				<ulink url="../ru/">Russian</ulink>, 
 				<ulink url="../sr/">Serbian</ulink>, 
-				<ulink url="../sr/">Serbian (Latin)</ulink>, 
+				<ulink url="../sr@Latin/">Serbian (Latin)</ulink>, 
 				<ulink url="../es/">Spanish</ulink>, 
 				<ulink url="../sv/">Swedish</ulink>,
 				<ulink url="../th/">Thai</ulink>, 
