@@ -1,5 +1,12 @@
 2007-09-13  Murray Cumming  <murrayc@murrayc.com>
 
+	* docbook/C/release-notes.xml:
+	* docbook/C/rnusers.xml: Fixed some typos, thanks to 
+	Theppitak Karoonboonyanan. I allowed myself to do this because 
+	maybe nobody has received my email about the freeze yet.
+
+2007-09-13  Murray Cumming  <murrayc@murrayc.com>
+
 	* docbook/C/release-notes.xml: Mention RTL in the introductory 
 	paragraph.
 	* docbook/C/rndevelopers.xml: Remove the TODO text which should 
